--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
                 <p>Mode: <span id="mode-value">Check-in</span></p>
                 <p>Name: <span id="scan-name">-</span></p>
                 <p>Email: <span id="scan-company">-</span></p>
-                <p class="scan-status hidden" id="scan-status">Status: <span id="status-value">-</span></p>
+                <div id="scan-statuses">
+                    <p class="scan-status hidden" id="checkin-status">Check-in: <span id="checkin-status-value">-</span></p>
+                    <p class="scan-status hidden" id="goodiebag-status">Goodie Bag: <span id="goodiebag-status-value">-</span></p>
+                </div>
             </div>
             
             <div class="lookup-container">
