--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <div id="result">
                 <p>Code: <span id="code-value">-</span></p>
                 <p>Mode: <span id="mode-value">Check-in</span></p>
-                <p>Name: <span id="scan-name">-</span></p>
-                <p>Email: <span id="scan-company">-</span></p>
+                <p>QR Code: <span id="scan-name">-</span></p>
+                <p><span id="scan-company" class="hidden">-</span></p>
                 <div id="scan-statuses">
                     <p class="scan-status hidden" id="checkin-status">Check-in: <span id="checkin-status-value">-</span></p>
                     <p class="scan-status hidden" id="goodiebag-status">Goodie Bag: <span id="goodiebag-status-value">-</span></p>
@@ -45,12 +45,7 @@
                     <button id="lookup-button">Search</button>
                 </div>
                 <div id="lookup-result" class="hidden">
-                    <div class="attendee-info">
-                        <p><strong>Name:</strong> <span id="attendee-name">-</span></p>
-                        <p><strong>Email:</strong> <span id="attendee-company">-</span></p>
-                        <p><strong>Check-in Status:</strong> <span id="attendee-checkin">-</span></p>
-                        <p><strong>Goodie Bag Status:</strong> <span id="attendee-goodiebag">-</span></p>
-                    </div>
+                    <!-- This will be populated dynamically -->
                 </div>
             </div>
             
