--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <div id="result">
                 <p>Code: <span id="code-value">-</span></p>
                 <p>Mode: <span id="mode-value">Check-in</span></p>
-                <p>QR Code: <span id="scan-name">-</span></p>
-                <p><span id="scan-company" class="hidden">-</span></p>
+                <p>Name: <span id="scan-name">-</span></p>
+                <p>Email: <span id="scan-company">-</span></p>
                 <div id="scan-statuses">
                     <p class="scan-status hidden" id="checkin-status">Check-in: <span id="checkin-status-value">-</span></p>
                     <p class="scan-status hidden" id="goodiebag-status">Goodie Bag: <span id="goodiebag-status-value">-</span></p>
