register timestamp, disable toggle when scanning

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <p>Mode: <span id="mode-value">Check-in</span></p>
                 <p>Name: <span id="scan-name">-</span></p>
                 <p>Email: <span id="scan-company">-</span></p>
+                <p>Registered at: <span id="scan-timestamp">-</span></p>
                 <div id="scan-statuses">
                     <p class="scan-status hidden" id="checkin-status">Check-in: <span id="checkin-status-value">-</span></p>
                     <p class="scan-status hidden" id="goodiebag-status">Goodie Bag: <span id="goodiebag-status-value">-</span></p>
