--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         </div>
         
         <div class="scanner-container">
+            <div id="camera-init-message">
+                <p>Initializing camera...</p>
+                <p class="small-text">If the camera doesn't start, please check your camera permissions</p>
+            </div>
             <div id="reader"></div>
         </div>
         
