--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <!-- Add meta tags for Google authentication -->
     <meta name="google-signin-client_id" content="681607833593-08kg1qc54mq4vn9vghd5rktuktovv5uu.apps.googleusercontent.com">
-    <!-- Modify Content Security Policy to allow for inline scripts (needed for Google auth) -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://accounts.google.com https://unpkg.com 'unsafe-inline'; connect-src 'self' https://script.google.com https://*.googleapis.com; style-src 'self' 'unsafe-inline'; img-src 'self' https://*.googleusercontent.com https://*.gstatic.com data:; frame-src 'self' https://accounts.google.com https://script.google.com;">
+    <!-- Updated Content Security Policy to allow connections to script.googleusercontent.com -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://accounts.google.com https://unpkg.com 'unsafe-inline'; connect-src 'self' https://script.google.com https://*.googleapis.com https://*.googleusercontent.com; style-src 'self' 'unsafe-inline'; img-src 'self' https://*.googleusercontent.com https://*.gstatic.com data:; frame-src 'self' https://accounts.google.com https://script.google.com;">
     
     <!-- Add debug console output -->
     <script>
