--- a/index.html
+++ b/index.html
@@ -19,9 +19,17 @@
                 data-client_id="681607833593-08kg1qc54mq4vn9vghd5rktuktovv5uu.apps.googleusercontent.com"
                 data-context="signin"
                 data-ux_mode="popup"
-                data-callback="handleCredentialResponse">
+                data-callback="handleCredentialResponse"
+                data-auto_select="true">
             </div>
-            <div class="g_id_signin" data-type="standard"></div>
+            <div class="g_id_signin" 
+                data-type="standard" 
+                data-shape="rectangular"
+                data-theme="outline"
+                data-text="signin_with"
+                data-size="large"
+                data-logo_alignment="left">
+            </div>
         </div>
     </div>
 
