add handler url

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                      data-client_id="681607833593-08kg1qc54mq4vn9vghd5rktuktovv5uu.apps.googleusercontent.com"
                      data-context="signin"
                      data-ux_mode="popup"
-                     data-login_uri="https://your-domain.com/handler"
+                     data-login_uri="https://dgfixami.github.io/handler"
                      data-auto_prompt="true"
                      data-callback="handleCredentialResponse">
                 </div>
