Clear user display name when not set and update session storage handling

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <h1>QR Code Scanner</h1>
             <div class="header-actions">
                 <div id="user-info" class="user-info-display">
-                    <span id="user-display-name">User</span>
+                    <span id="user-display-name"></span>
                 </div>
                 <button id="logout-btn" class="logout-button">Exit</button>
             </div>
