--- a/index.html
+++ b/index.html
@@ -109,14 +109,7 @@
         </div>
         
         <div class="scanner-container">
-            <div id="reader">
-                <!-- Camera will initialize here -->
-                <!-- If camera access fails, permission help will appear here -->
-            </div>
-            <div class="camera-flash"></div>
-            <p class="camera-notice" style="color: #666; font-size: 12px; margin-top: 5px;">
-                Please allow camera access when prompted by your browser
-            </p>
+            <div id="reader"></div>
         </div>
         
         <div class="result-container">
