Revert "Updates Content Security Policy for camera permissions and refactors scanner initialization logic for improved error handling and user experience."
This reverts commit 4abdcc2324f82cd759154da0abb6cb0ccfc3adb1.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code Scanner</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Update Content Security Policy to ensure camera permissions -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://unpkg.com/html5-qrcode 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob:; connect-src 'self' https://api.ipify.org https://script.google.com/macros/ blob:; media-src 'self' mediadevices: blob:;">
+    <!-- Add Content Security Policy -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://unpkg.com/html5-qrcode 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob:; connect-src 'self' https://api.ipify.org https://script.google.com/macros/ blob:; media-src 'self' blob:;">
     <script>
         // Inline script to immediately check access before loading content
         (function() {
