Enhance access request handling by adding user agent tracking and switching to URL-encoded form data for improved compatibility

--- a/request-access.html
+++ b/request-access.html
@@ -202,16 +202,23 @@
                 const requestData = {
                     action: "accessRequest",
                     name: sanitizeInput(name),
-                    ip: userIP
+                    ip: userIP,
+                    userAgent: navigator.userAgent || "Unknown device" // Add user agent for device tracking
                 };
                 
-                // Send to server
+                // Convert to URL encoded form data which works better with Google Apps Script
+                const formData = new URLSearchParams();
+                for (const key in requestData) {
+                    formData.append(key, requestData[key]);
+                }
+                
+                // Send to server - using form data instead of JSON
                 fetch(scriptUrl, {
                     method: 'POST',
                     headers: {
-                        'Content-Type': 'application/json',
+                        'Content-Type': 'application/x-www-form-urlencoded',
                     },
-                    body: JSON.stringify(requestData),
+                    body: formData.toString(),
                     mode: 'no-cors' // Required for Google Apps Script web apps
                 })
                 .then(() => {
