Enhance QR scanner UI with loading state management and visual feedback

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>QR Code Scanner</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="qr-scanning-active">
     <div class="container">
         <h1>QR Code Scanner</h1>
         
