Revert "Enhance QR scanner UI with loading state management and visual feedback"
This reverts commit 03e00edff7a8eca6bc7e3c153b7a95c9dd7455b9.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>QR Code Scanner</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="qr-scanning-active">
+<body>
     <div class="container">
         <h1>QR Code Scanner</h1>
         
