Add loading overlay with spinner and status for scanner processing

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         </div>
         
         <div class="scanner-container">
-            <div id="reader"></div>
+            <div id="reader">
+                <!-- Loading overlay will be added here dynamically -->
+            </div>
         </div>
         
         <div class="result-container">
