--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
         </div>
         
         <div class="scanner-container">
-            <div id="reader">
-                <!-- Loading overlay will be added here dynamically -->
-            </div>
+            <div id="reader"></div>
         </div>
         
         <div class="result-container">
